<resources>
    <string name="app_name">Chapter5</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Exchange of services</string>
    <string name="final_fragment_label">Confirmation</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="submit_contract">Submit Contract</string>
    <string name="submitted">Submitted!</string>

    <string name="your_household_label">Your household</string>
    <string name="your_household_name">Your household name</string>
    <string name="your_household_service">Service your household provides</string>

    <string name="your_neighbor_label">Your neighbor</string>
    <string name="your_neighbor_name">Your neighbor name</string>
    <string name="your_neighbor_service">Service your neighbor provides</string>
</resources>