<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/your_household_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_household_label"
        app:layout_constraintBottom_toTopOf="@id/your_household_name_textedit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/your_household_name_textedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/your_household_name"
        app:layout_constraintBottom_toTopOf="@id/your_household_service_textedit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_household_label" />

    <EditText
        android:id="@+id/your_household_service_textedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/your_household_service"
        app:layout_constraintBottom_toTopOf="@id/your_neighbor_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_household_name_textedit" />

    <TextView
        android:id="@+id/your_neighbor_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_neighbor_label"
        app:layout_constraintBottom_toTopOf="@id/your_neighbor_submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/your_household_service_textedit" />

    <EditText
        android:id="@+id/your_neighbor_name_textedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/your_neighbor_name"
        app:layout_constraintBottom_toTopOf="@id/your_neighbor_service_textedit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_neighbor_label" />

    <EditText
        android:id="@+id/your_neighbor_service_textedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/your_neighbor_service"
        app:layout_constraintBottom_toTopOf="@id/your_neighbor_submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_neighbor_name_textedit" />
    <Button
        android:id="@+id/your_neighbor_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_contract"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_neighbor_service_textedit" />
</androidx.constraintlayout.widget.ConstraintLayout>